Add code display

--- a/assistant/assistant.yaml
+++ b/assistant/assistant.yaml
@@ -9,7 +9,7 @@ whisperRecognition:
 
 ollama:
   url: "http://localhost:11434/api/generate"
-  model: "mistral"
+  model: "codellama"
 
 conversation:
   greeting: "Hi, how can I help you?"
@@ -18,3 +18,4 @@ autowebsite:
   userPromptFilePath: "../src/lib/user-prompt.js"
   userPromptFormatFilePath: "prompt.txt"
   componentFilePath: "../src/lib/Worktable.svelte"
+  componentPlaintextFilePath: "../src/lib/Worktable.txt"
