--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "svelte": "^4.2.10",
     "vite": "^5.1.0"
+  },
+  "dependencies": {
+    "prism-svelte": "^0.5.0",
+    "prismjs": "^1.29.0"
   }
 }
