--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "svelte": "^4.2.10",
+    "svelte-highlight": "^7.6.0",
     "vite": "^5.1.0"
   },
   "dependencies": {
+    "highlight.js": "^11.9.0",
     "prism-svelte": "^0.5.0",
     "prismjs": "^1.29.0"
   }
