--- a/autowebsite/package.json
+++ b/autowebsite/package.json
@@ -12,7 +12,9 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "tailwind-styled-components": "^2.2.0",
+    "tailwindbase": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
